partnership component created + responsive for partner page

--- a/src/components/GreenBox/GreenBox.css
+++ b/src/components/GreenBox/GreenBox.css
@@ -1,39 +1,60 @@
 .titleGreenContainer{
-    padding: 80px 0px 40px 0px;
-    background: var(--green-background-color);
+  padding: 60px 0px 0px 0px;
+  background: var(--green-background-color);
 }
 
 .greenWrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background: var(--green-background-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: var(--green-background-color);
+	padding: 0 20px;
 }
 
 .greenLeftBlock{
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    margin: 0 20px;
-    padding: 0 20px;
+  flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin-bottom: 20px;
+  padding: 0 20px;
 }
 .greenLeftBlock img{
-    min-width: 50%;
-    max-width: 100%;
-    margin: 20px;
+  min-width: 50%;
+  max-width: 100%;
+  margin: 20px;
 }
 
 .greenRightBlock{
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: left;
-    width: 50%;
-    margin: 20px;
-    padding: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  width: 50%;
+  padding: 20px;
 }
 .greenRightBlock p{
-    /* border-left: 6px solid var(--main-background-color); */
-    color: var(--sections-txt-color);
-    padding-left: 20px;
-    font-size: 1.5vw;
+  /* border-left: 6px solid var(--main-background-color); */
+  color: var(--sections-txt-color);
+  /* padding-left: 20px; */
+}
+
+@media only screen and (min-width: 1024px) {
+  .greenLeftBlock{
+    width: 30%;  
+  }
+  .greenRightBlock{
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+.titlegreenContainer{
+  padding: 0px 0px 20px 0px;
+}
+.greenWrapper{
+  flex-direction:column;
+}
+.greenLeftBlock, .greenRightBlock{
+	width: 100%;
+}
 }
