--- a/src/components/CreamBox/CreamBox.css
+++ b/src/components/CreamBox/CreamBox.css
@@ -1,37 +1,58 @@
 .titleCreamContainer{
-    padding: 80px 0px 40px 0px;
+  padding: 40px 0px 0px 0px;
 }
 
 .creamWrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+	padding: 0 20px;
 }
 
 .creamLeftBlock{
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    margin: 0 20px;
-    padding: 0 20px;
+  flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin-bottom: 20px;
+  padding: 0 20px;
 }
 .creamLeftBlock img{
-    min-width: 50%;
-    max-width: 100%;
-    margin: 20px;
+  min-width: 50%;
+  max-width: 100%;
+  margin: 20px;
 }
 
 .creamRightBlock{
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: left;
-    width: 50%;
-    margin: 20px;
-    padding: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  width: 50%;
+  padding: 20px;
 }
 .creamRightBlock p{
-    border-left: 6px solid var(--red-background-color: #EB5160);
-    color: var(--main-font-color: #EB5160);
-    padding-left: 20px;
-    font-size: 1.5vw;
+  border-left: 6px solid var(--red-background-color: #EB5160);
+  color: var(--main-font-color: #EB5160);
+  padding-left: 20px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .creamLeftBlock{
+    width: 30%;  
+  }
+  .creamRightBlock{
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+.titleCreamContainer{
+  padding: 0px 0px 20px 0px;
+}
+.creamWrapper{
+  flex-direction:column;
+}
+.creamLeftBlock, .creamRightBlock{
+	width: 100%;
+}
 }
