--- a/src/components/RibbonTitle/RibbonTitle.css
+++ b/src/components/RibbonTitle/RibbonTitle.css
@@ -31,5 +31,5 @@
   margin-bottom: 0;
   background-color: var(--red-background-color);
   color: var(--main-background-color);
-  clip-path: polygon(0 0, 6% 50%, 0 100%, 100% 100%, 94% 50%, 100% 0);
+  clip-path: polygon(0 0, 25px 50%, 0 100%, 100% 100%, calc(100% - 25px) 50%, 100% 0);
 }
