--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -49,6 +49,11 @@
 }
 
 
+@media screen and (max-width: 788px) {
+  .footer {
+    margin-bottom: 80px;
+  }
+}
 @media screen and (max-width: 700px) {
   .footerLink {
     width: 90%;
