--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,9 +27,21 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  margin: 0;
 }
 
-
-.offset-right{
+.offset-right {
   padding-left: 10vw;
+}
+
+@media only screen and (max-width : 788px) {
+  .header-text {
+    font-size: 0.9em;
+  }
+  .top-text {
+    margin: 0.3em;
+  }
+  .offset-right {
+    margin: 0.3em;
+  }
 }
