--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,6 +22,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  font-size: 0.8em;
   border-right: 1px solid var(--nav-list-items-color);
   transform: skew(-30deg) rotate(0deg);
 }
@@ -93,7 +94,7 @@ border-bottom: 2px solid var(--red-background-color);
 margin-bottom: 10px;
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width: 400px){
   button.modal-toggle,input[type="submit"],.form-btn {
     font-size: 80%;
     width: 60%;
