--- a/src/components/Card/PoleCard.css
+++ b/src/components/Card/PoleCard.css
@@ -98,7 +98,7 @@ display: none;
   .polecard-container {
     width: 100%;
     height: 40vh;
-    margin: 10px;
+    margin: 10px 0;
     display: flex;
     flex-direction: column ;
     align-items: center;
