--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,12 +35,20 @@
 }
 
 @media only screen and (max-width : 788px) {
-  .header-text {
-    font-size: 0.9em;
+  .header-logo-container {
+    margin-left: 10px;
+    max-width: 20%;
   }
+
+  .header-text {
+    font-size: 0.8em;
+    max-width: 70%;
+  }
+
   .top-text {
     margin: 0.3em;
   }
+
   .offset-right {
     margin: 0.3em;
   }
