--- a/src/components/Navbar/MobileNavBar.css
+++ b/src/components/Navbar/MobileNavBar.css
@@ -10,13 +10,13 @@
   bottom: 0;
   height: 80px;
   width: 100%;
-  opacity: 80%;
 }
 
 .mobile-menu {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   margin-bottom: 80px;
   background-color: var(--red-background-color);
   position: absolute;
@@ -28,10 +28,19 @@
   font-size: 1.2em;
 }
 
-div a {
+.mobile-menu a {
+  /* width: 50%; */
   padding: 15px;
   animation: 1s slide-up-text;
+  border-bottom: 1px solid white;
+}
 
+.mobile-menu a:last-child {
+  border: none;
+}
+
+.mobile-menu a:hover {
+  text-decoration: none;
 }
 
 .bar-container:hover {
