--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -27,6 +27,7 @@
 	width : 15%;
 	/* height: 100vh; */
 	background-color: #313131;
+	padding-bottom: 10px;
 }
 .dashboard{
 	padding: 10px;
@@ -40,7 +41,7 @@
 }
 .adminLinkButton{
 	background-color: #414141;
-	padding: 20px;
+	padding: 15px;
 	margin: 10px;
 	border-radius: 5px;
 }
@@ -186,7 +187,7 @@
 	background-color: #616161;
 	color: white;
 }
-.teamFormContainer{
+.teamFormContainer, .partnerFormContainer{
 	background-color: aqua;
 	width: 90%;
 	margin: auto;
