--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -187,7 +187,7 @@
 	background-color: #616161;
 	color: white;
 }
-.teamFormContainer, .partnerFormContainer{
+.teamFormContainer, .partnerFormContainer, .activityFormContainer{
 	background-color: aqua;
 	width: 90%;
 	margin: auto;
