Fixed CSS, added API Call for Partners

--- a/src/components/FuncPole/FuncPole.css
+++ b/src/components/FuncPole/FuncPole.css
@@ -5,3 +5,9 @@
 .rightGreenContainer {
   width: 70%;
 }
+
+@media screen and (max-width: 788px) {
+  .rightGreenContainer {
+    width: 100%;
+  }
+}
