--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -94,6 +94,16 @@ border-bottom: 2px solid var(--red-background-color);
 margin-bottom: 10px;
 }
 
+.form-logout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-logout button {
+  width: 300px;
+}
+
 @media screen and (max-width: 400px){
   button.modal-toggle,input[type="submit"],.form-btn {
     font-size: 80%;
