--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -125,11 +125,31 @@
 	cursor: pointer;
 }
 .cardContent{
+	display: flex;
 	position: relative;
 	width:100%;
 	height:100%;
 	pointer-events: none;
+  align-items: flex-end;
 }
+
+.cardName{
+  z-index: 0;
+	position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+
+}
+
+.cardName .title {
+  background-color: #313131;
+  width: 100%;
+  z-index: 0;
+  padding: 5px 0px;
+}
+
 /* .cardContent img{
 	position: absolute;
 	min-height: 200px;
@@ -146,7 +166,8 @@
 	margin-left:15px;
 	background-color: snow;
 	border-radius: 5px;
-	color: var(--main-font-color)
+	color: var(--main-font-color);
+  z-index:400;
 }
 
 /*----- Bottom Div -----*/
