--- a/src/screens/Admin/form.css
+++ b/src/screens/Admin/form.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   /* box-shadow: 0 0 7px rgba(0, 0, 0, 0.3); */
   padding: 10px 0;
-  background: #E64980;
+  background: var(--red-background-color)
 }
 .formItems > * {
   margin: 10px;
