--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -60,6 +60,7 @@
   font-weight: 400;
   text-align: left;
   gap: 10px;
+  transform: translateX(5%);
 }
 
 .contactInfoTextPhone {
@@ -164,6 +165,18 @@ margin: 0;
 
 .formMessage {
   background-color: var(--green-background-color)
+}
+
+@media screen and (min-width: 1000px){
+  .contactMap {
+    width: 600px;
+  }
+  .contactInfoContent {
+    width: 60%;
+  }
+  .contactInfoText {
+    transform: translateX(0);
+  }
 }
 
 
