--- a/src/screens/Admin/PoleAdmin.css
+++ b/src/screens/Admin/PoleAdmin.css
@@ -1,4 +1,4 @@
-.activityDroplist {
+/* .activityDroplist {
   width: 100%;
   height: 300px;
   background: #E64980;
@@ -50,4 +50,4 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
+} */
