--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -48,10 +48,11 @@
   margin-right: 20px;
   cursor: pointer;
   transition: 0.2s;
+  color: transparent;
 }
 
 .user-icon:hover {
-  transform: scale(1.05);
+  filter: grayscale(10%);
 }
 
 a {
