--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -16,7 +16,6 @@
 }
 
 /* CONCEPT */
-
 .conceptContainer {
   background: #52908B;
   width: 100%;
@@ -27,7 +26,6 @@
   display: flex;
   align-items: center;
   padding-top: 90px;
-  /* padding-bottom: 30px; */
 }
 
 .conceptTitle, .teamTitle {
@@ -47,27 +45,36 @@ color: var(--title-color);
   padding: 0 10px;
 }
 
-.conceptImage {
-  width: 50%;
-  height: 50vh;
-}
-
-.part1 {
+.conceptPart {
   display: flex;
-  justify-content:space-around;
-  padding-top: 30px;
-}
-
-.conceptP1 {
-  text-align: left;
-  width: 50%;
-  color: var(--title-color);
-  display: flex;
-  justify-content: center;
   flex-direction: column;
-  padding: 12px;
-  font-size: 18px;
-  padding-left: 25px;
+  width: 100%;
+}
+
+
+.part1, .part2, .part3 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.containImg{
+  width: 50%;
+  min-width: 300px;
+}
+
+.conceptImage {
+  width: 100%;
+}
+
+.conceptP1, .conceptP2, .conceptP3 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  color: var(--title-color);
+  padding: 0px 25px;
 }
 
 .block-buster {
@@ -86,45 +93,7 @@ color: var(--title-color);
   font-weight: 600;
 }
 
-.part2 {
-  display: flex;
-  justify-content:space-around;
-}
-
-.imgGhost {
-  display: none;
-}
-
-.conceptP2 {
-  text-align: left;
-  width: 50%;
-  color: var(--title-color);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 12px;
-  font-size: 19px;
-  padding-left: 40px;
-}
-
-.conceptP3 {
-  text-align: left;
-  width: 50%;
-  color: var(--title-color);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 12px;
-  font-size: 16px;
-}
-
-.part3 {
-  display: flex;
-  justify-content:space-around;
-}
-
 /* POLES */
-
 .poles {
   display: flex;
   flex-direction: column;
@@ -172,8 +141,6 @@ color: var(--title-color);
 }
 
 /* TEAM */
-
-
 .teamContainer {
   display: flex;
   flex-direction: column;
@@ -203,7 +170,7 @@ color: var(--title-color);
   padding: 0 10px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1024px) {
 
     /* BANNER */
 
@@ -214,18 +181,17 @@ color: var(--title-color);
   }
 
     /* CONCEPT */
-    
-
+  
   .descContainer {
     margin: 0 15px;
   }
-  .conceptContainer {
+  /* .conceptContainer {
     background: #52908B;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-  }
+    /* flex-direction: column; */
+  /* } */ 
   
   .titleContainer {
     display: flex;
@@ -263,31 +229,6 @@ color: var(--title-color);
     padding: 0 10px;
   }
 
-  .conceptImage {
-    width: 100%;
-    height: 40vh;
-  }
-  
-  .part1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 30px;
-  }
-  
-  .conceptP1 {
-    text-align: left;
-    width: 90%;
-    color: var(--title-color);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 12px;
-    font-size: 18px;
-    padding-left: 25px;
-  }
-
   .block-buster {
     display: flex;
     align-items: center;
@@ -304,49 +245,21 @@ color: var(--title-color);
     font-weight: 600;
   }
   
-  .part2 {
+  .part1, .part2, .part3 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-
-  .imgGhost {
-    display: block;
     width: 100%;
-    height: 40vh;
-  }
-
-  .conceptImageGhost {
-    display: none;
   }
   
-  .conceptP2 {
-    text-align: left;
-    width: 90%;
-    color: var(--title-color);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 12px;
-    font-size: 19px;
-    padding-left: 40px;
+  
+  .containImg{
+    width: 100%;
+    order: -1;
   }
   
-  .conceptP3 {
-    text-align: left;
-    width: 90%;
-    color: var(--title-color);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 12px;
-    font-size: 16px;
-  }
   
-  .part3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .conceptP1, .conceptP2, .conceptP3 {
+    width: 100%;
   }
 
 }
