--- a/src/components/Card/MemberCard.css
+++ b/src/components/Card/MemberCard.css
@@ -4,8 +4,10 @@
 }
 
 .member-img {
-  width: 400px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
+	border-radius: 50%;
+	padding: 10px;
 }
 
 .card-desc {
