--- a/src/components/Card/MemberCard.css
+++ b/src/components/Card/MemberCard.css
@@ -38,14 +38,13 @@
 
 @media screen and (max-width: 600px) {
   .card-container {
-    width: 90%;
+    width: fit-content;
     padding-bottom: 50px;
     align-content: center;
   }
   
   .member-img {
-    width: 100%;
-    height: 350px;
+    width: 90%;
   }
   
   .card-desc {
